--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@amn31/ma-data-grid",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "peerDependencies": {
     "@angular/common": "^10.1.6",
     "@angular/core": "^10.1.6"
@@ -11,7 +11,7 @@
     "jquery": "^3.5.1",
     "materialize-css": "^1.0.0"
   },
-  "description": "Permet l'affichage des données d'un tableau, avec pagination, trie, et filtre",
+  "description": "@amn31/ma-data-grid is an Angular component for presenting large and complex data. The table was designed to be flexible and light package. The features regarding filtering, sorting or paging are already available without creating additional code.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/amn31/ma-data-grid.git"
