--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@amn31/ma-data-grid",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "peerDependencies": {
     "@angular/common": "^10.1.6",
     "@angular/core": "^10.1.6"
@@ -37,8 +37,6 @@
   "esm2015": "esm2015/amn31-ma-data-grid.js",
   "fesm2015": "fesm2015/amn31-ma-data-grid.js",
   "typings": "amn31-ma-data-grid.d.ts",
-  "sideEffects": false,
-  "scripts": {
-    "prepublishOnly": "node --eval \"console.error('ERROR: Trying to publish a package that has been compiled by Ivy. This is not allowed.\\nPlease delete and rebuild the package, without compiling with Ivy, before attempting to publish.\\n')\" && exit 1"
-  }
+  "metadata": "amn31-ma-data-grid.metadata.json",
+  "sideEffects": false
 }
